--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url(https://img.freepik.com/free-vector/gradient-hexagonal-background_23-2148954968.jpg);
+    background: url(back.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
